--- a/zookeeper-contrib/zookeeper-contrib-zooinspector/src/main/resources/log4j.properties
+++ b/zookeeper-contrib/zookeeper-contrib-zooinspector/src/main/resources/log4j.properties
@@ -1,9 +1,21 @@
-# ***** Set root logger level to INFO and it appender to stdout.
-log4j.rootLogger=INFO,stdout
+## ***** Set root logger level to INFO and it appender to stdout.
+#log4j.rootLogger=INFO,stdout
+#
+## ***** stdout is set to be a ConsoleAppender.
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+## ***** stdout uses PatternLayout.
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+## ***** Pattern to output the caller's file name and line number.
+#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
-# ***** stdout is set to be a ConsoleAppender.
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-# ***** stdout uses PatternLayout.
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-# ***** Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+status = error
+name = ZooInspectorLog4j2Config
+
+appender.console.type = Console
+appender.console.name = STDOUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %5p [%t] (%F:%L) - %m%n
+
+rootLogger.level = info
+rootLogger.appenderRefs = stdout
+rootLogger.appenderRef.stdout.ref = STDOUT
