--- a/zookeeper-contrib/zookeeper-contrib-zooinspector/build.xml
+++ b/zookeeper-contrib/zookeeper-contrib-zooinspector/build.xml
@@ -40,7 +40,7 @@
 			</fileset>
 		</copy>
 		<copy todir="${build.dir}/lib">
-			<fileset file="${basedir}/src/main/resources/log4j.properties" />
+			<fileset file="${basedir}/src/main/resources/log4j2.properties" />
 		</copy>
 		<copy todir="${build.dir}/lib">
 			<fileset file="../../build/zookeeper-${version}.jar" />
@@ -108,7 +108,7 @@
 		<junit showoutput="${test.output}" printsummary="${test.junit.printsummary}" haltonfailure="${test.junit.haltonfailure}" fork="yes" forkmode="${test.junit.fork.mode}" maxmemory="${test.junit.maxmem}" dir="${basedir}" timeout="${test.timeout}" errorProperty="tests.failed" failureProperty="tests.failed">
 			<sysproperty key="build.test.dir" value="${test.tmp.dir}" />
 			<sysproperty key="test.data.dir" value="${test.data.dir}" />
-			<sysproperty key="log4j.configuration" value="file:${basedir}/conf/log4j.properties" />
+			<sysproperty key="log4j.configuration" value="file:${basedir}/conf/log4j2.properties" />
 			<classpath refid="classpath" />
 			<classpath>
 				<pathelement path="${build.test}" />
