--- a/zookeeper-recipes/zookeeper-recipes-lock/build.xml
+++ b/zookeeper-recipes/zookeeper-recipes-lock/build.xml
@@ -91,7 +91,7 @@
           <sysproperty key="build.test.dir" value="${test.tmp.dir}" />
           <sysproperty key="test.data.dir" value="${test.data.dir}" />
           <sysproperty key="log4j.configuration"
-                    value="file:${basedir}/conf/log4j.properties" />
+                    value="file:${basedir}/conf/log4j2.properties" />
           <classpath refid="classpath"/>
           <classpath>
              <pathelement path="${build.test}" />
