zookeeper log4j2 migration

--- a/conf/log4j2.properties
+++ b/conf/log4j2.properties
@@ -93,7 +93,7 @@ property.zookeeper.log.maxfilesize=256MB
 property.zookeeper.log.maxbackupindex=20
 
 
-appenders = console, file
+appenders = console, file , auditfile
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
@@ -102,7 +102,7 @@ appender.console.filter.threshold.type = ThresholdFilter
 appender.console.filter.threshold.level = ${zookeeper.console.threshold}
 
 
-appender.file.type = File
+appender.file.type = RollingFile
 appender.file.name = ZOOKEEPER_LOG_FILE
 appender.file.filter.threshold.type = ThresholdFilter
 appender.file.filter.threshold.level = ${zookeeper.log.threshold}
@@ -119,7 +119,7 @@ appender.file.strategy.max = ${zookeeper.log.maxbackupindex}
 property.zookeeper.auditlog.file=zookeeper_audit.log
 property.zookeeper.auditlog.threshold=info
 
-appender.auditfile.type = File
+appender.auditfile.type = RollingFile
 appender.auditfile.name = AUDITLOG
 appender.auditfile.filter.threshold.type = ThresholdFilter
 appender.auditfile.filter.threshold.level = ${zookeeper.auditlog.threshold}
@@ -142,7 +142,7 @@ logger.auditlog.appenderRef.auditfile.ref = AUDITLOG
 rootLogger.level = info
 rootLogger.appenderRefs = stdout, logfile
 rootLogger.appenderRef.stdout.ref = STDOUT
-#rootLogger.appenderRef.logfile.ref = ZOOKEEPER_LOG_FILE
+rootLogger.appenderRef.logfile.ref = ZOOKEEPER_LOG_FILE
 
 
 
