--- a/pom.xml
+++ b/pom.xml
@@ -575,12 +575,13 @@
           <configuration>
              <showWarnings>true</showWarnings>
              <compilerArgs>
-               <compilerArg>-Werror</compilerArg>
+<!--               <compilerArg>-Werror</compilerArg>-->
                <compilerArg>-Xlint:deprecation</compilerArg>
                <compilerArg>-Xlint:unchecked</compilerArg>
                <compilerArg>-Xlint:-options</compilerArg>
                <compilerArg>-Xdoclint:-missing</compilerArg>
                <!-- https://issues.apache.org/jira/browse/MCOMPILER-205 -->
+<!--               <compilerArg>-Xlint:all</compilerArg>-->
                <compilerArg>-Xpkginfo:always</compilerArg>
               </compilerArgs>
             </configuration>
@@ -876,7 +877,7 @@
         <artifactId>apache-rat-plugin</artifactId>
         <configuration>
           <excludes>
-            <exclude>**/log4j.properties</exclude>
+            <exclude>**/log4j2.properties</exclude>
             <exclude>**/README.md</exclude>
             <exclude>**/findbugsExcludeFile.xml</exclude>
             <exclude>**/checkstyle-noframes-sorted.xsl</exclude>
