--- a/zookeeper-contrib/zookeeper-contrib-rest/conf/log4j2.properties
+++ b/zookeeper-contrib/zookeeper-contrib-rest/conf/log4j2.properties
@@ -86,7 +86,7 @@ appenders = console, file
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{ISO8601} [myid:%X{myid}] - %-5p [%t:%C{1}@%L] - %m%n
+appender.console.layout.pattern = %d{ISO8601} [myid:%pid] - %-5p [%t:%C{1}@%L] - %m%n
 appender.console.filter.threshold.type = ThresholdFilter
 appender.console.filter.threshold.level = ${zookeeper.console.threshold}
 
@@ -97,7 +97,7 @@ appender.file.filter.threshold.level = ${zookeeper.log.threshold}
 appender.file.filename = ${zookeeper.log.dir}/${zookeeper.log.file}
 appender.file.filePattern = ${zookeeper.log.dir}/zookeeper-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.file.layout.type = PatternLayout
-appender.file.layout.pattern = %d{ISO8601} [myid:%X{myid}] - %-5p [%t:%C{1}@%L] - %m%n
+appender.file.layout.pattern = %d{ISO8601} [myid:%pid] - %-5p [%t:%C{1}@%L] - %m%n
 appender.file.policies.type = Policies
 appender.file.policies.size.type = SizeBasedTriggeringPolicy
 appender.file.policies.size.size=10MB
